did some changes

--- a/public/chocolate.html
+++ b/public/chocolate.html
@@ -30,7 +30,7 @@
                                     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
                                     <h1 style="color: white; text-align: center; padding-top: 5px; font-size: 35px; font-family: sans-serif;">SignUp Here</h1>
                                     <div class="container">
-                                    <div class="con"><i class="fa fa-user icon" style="color:;"></i></div>
+                                    <div class="con"><i class="fa fa-user icon"></i></div>
                                     <input type="text " placeholder="Enter Your Name" name="uname">
                                     </div>
                                     <div class="container">
@@ -121,7 +121,7 @@ window.onclick = function(event) {
                     Supporting small business
                    <br>Out For Delivery<br>
                     Working at Fine-Choice-Shopping-Mart
-                    <a href="aboutus.html">Read More</a>
+                    <a href="aboutus.php">Read More</a>
                 </p>
             </div>
         </div>
