--- a/public/cleaning.html
+++ b/public/cleaning.html
@@ -122,7 +122,7 @@ window.onclick = function(event) {
                     Supporting small business
                    <br>Out For Delivery<br>
                     Working at Fine-Choice-Shopping-Mart
-                    <a href="aboutus.html">Read More</a>
+                    <a href="aboutus.php">Read More</a>
                 </p>
             </div>
         </div>
